fixed erroneous cropping of the bottom part of the stalks

--- a/public/stylesheets/oracle.css
+++ b/public/stylesheets/oracle.css
@@ -128,7 +128,7 @@ body {
 	}
 
 	#stalks-container {
-		height: 290px;
+		height: 300px;
 	}
 }
 
